# cgc

./: .gitignore  CMakeLists.txt  README.md  hair.cpp  main.cpp
engine/: CMakeLists.txt
engine/glad/include/glad/: gl.h
engine/include/: Camera.h  DER.h  HairLoader.h  HairModel.h  HairRenderer.h  PBD.h  Shader.h  Strand.h  util.h
engine/src/: Camera.cpp  DER.cpp  HairLoader.cpp  HairModel.cpp  HairRenderer.cpp  PBD.cpp  Strand.cpp  util.cpp
include/: Camera.h  DER.h  HairFile.h  Node.h  PBD.h  Rod.h  Strand.h  util.h
project/: CMakeLists.txt
project/cuda/: CMakeLists.txt  DER.cpp  DER.h  main.cpp  pbd.cu  pbd.cuh
project/hairview/: CMakeLists.txt  main.cpp
project/sample/: CMakeLists.txt  main.cpp
project/sample0/: CMakeLists.txt  main.cpp
shader/: fragment_shader.glsl  hair_fragment.glsl  hair_vertex.glsl  tiny_hair_fragment.glsl  tiny_hair_vertex.glsl  vertex_shader.glsl
src/: Camera.cpp  DER.cpp  HairFile.cpp  Node.cpp  PBD.cpp  Rod.cpp  Shader.cpp  Strand.cpp  util.cpp
